src/test/ui/feature-gates/feature-gate-type_ascription.stderr
error[E0658]: type ascription is experimental (see issue #23416)
  --> $DIR/feature-gate-type_ascription.rs:4:13
   |
LL |     let a = 10: u8; //~ ERROR type ascription is experimental
   |             ^^^^^^
   |
   = help: add #![feature(type_ascription)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
